# Tantivy-JNI-Prototype

./: HelloWorld.java  README.md  SearchTantivy.java
mylib/: Cargo.toml
mylib/src/: lib.rs  tantivy.rs
mylib/src/tantivy/: build_index.rs  do_query.rs
