[package]
name = "mylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tantivy = "0.20"
futures = "*"

[lib]
crate_type = ["cdylib"]